225: style bugfixes: center everything, visibility problems fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -110,6 +110,10 @@ header {
   }
 }
 
+#logo {
+  height: 45px;
+}
+
 /* MOBILE NAVIGATION */
 #mobile-menu {
   cursor: pointer;
@@ -127,6 +131,7 @@ header {
   left: 0;
   right: 0;
   background: #323E4C;
+  line-height: 3rem;
 
   ul > li {
     padding: 1.5rem;
@@ -134,7 +139,6 @@ header {
     text-align: left;
     margin: 0.5rem;
     background: #303C4A;
-    line-height: 3rem;
 
     a {
       text-decoration: none;
@@ -176,9 +180,14 @@ form {
   @include box();
 
   .form-group {
-    width: 60%;
+    width: 100%;
     margin: 0.5em 0;
-    @include flex(column, center, center);
+    @include flex(column, center, flex-start);
+  }
+
+  a {
+    margin-top: 2rem;
+    color: $highlightcolor;
   }
 }
 
@@ -226,7 +235,7 @@ input {
 }
 
 .email {
-  @include flex();
+  @include flex(row, center, center);
   width: 100%;
 }
 
@@ -241,7 +250,7 @@ input {
 footer {
   @include box();
   margin-top: 2rem;
-  @include flex(row, space-between);
+  @include flex(row, space-between, center);
   color: #364352;
   font-size: small;
   nav > ul > li {
