--- a/src/app/components/manage-categories/manage-categories.component.scss
+++ b/src/app/components/manage-categories/manage-categories.component.scss
@@ -42,7 +42,7 @@ input[disabled]:hover{
 
 @media (min-width: 700px) {
   .footer {
-    @include flex(row);
+    @include flex(row, center, center);
     button {
       margin: 0 0.25em;
     }
